samples/_failures_safe/1761126664_a85f15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78b2f9f2.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_78b2f9f2.c:184:5: error: expected declaration or statement at end of input
  184 |     for (int i = 0; i < graph->node_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_78b2f9f2.c:184:5: error: expected declaration or statement at end of input
